--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version = 'v1.0.0'
 jar {
    manifest {
       attributes(
-         'Implementation-Title': 'Extrator Correios',
+         'Implementation-Title': '.:: Extrator de Endereços dos Correios do Brasil ::.',
          'Implementation-Version': version
       )
    }
@@ -21,7 +21,6 @@ repositories {
 }
 
 dependencies {
-   
    compile 'com.thoughtworks.xstream:xstream:1.4.8'
    compile 'org.codehaus.jettison:jettison:1.3.7'
    compile 'org.projectlombok:lombok:1.16.18'
